Added Mongo url to .env file
